--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Result</title>
+		<meta charset="utf-8">
+		<title>bin.com</title>
 	</head>
-	<body><h1>YEAH SANDWICHES</h1>
-	<img src="http://bit.ly/RhrMEn" />
-		<p>I like eggs.</p>
+	<body>
+		<h1>YEAH SANDWICHES</h1>
+		<img src="img/maintitle.jpg" />
+		<p>프로그래밍 하고 있습니다</p>
+		<p>문제해결 하고 싶습니다.</p>
+		<hr>
 		<p>And ham!</p>
-		<p>But mostly sandwiches.</p>
+		<p>NULL의 <a href="https://brunch.co.kr/@llun">브런치</a>입니다.</p>
 	</body>
 </html>
